# ddeolyee-be

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  security.py
docs/: api-summary.md
docs/notion-export/part-1/: 6팀 (고성노) 74c94861f90b83f2adfe011df096c35a.md  api-docs.html
scripts/: diagnose_db.py
tests/: test_api_flow.py
